refactor: Remove Lovable references and update app metadata
- Update index.html metadata with Divine AI branding
  - Improve SEO descriptions and titles
  - Update social media card metadata
  - Remove GPT Engineer script
  - Set proper OpenGraph and Twitter card images

- Rewrite README.md for Divine AI
  - Add comprehensive project description
  - List key features and technologies
  - Simplify development setup instructions
  - Add production build section
  - Add contributing guidelines

This commit removes all third-party branding and establishes proper
Divine AI identity across documentation and metadata.

--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Divine AI - Personal Hindu Wisdom Assistant</title>
-    <meta name="description" content="Your personal guide to spiritual wisdom from Hindu texts" />
-    <meta name="author" content="Lovable" />
+    <title>Divine AI - Your Personal Guide to Hindu Wisdom</title>
+    <meta name="description" content="Discover ancient Hindu wisdom through AI-powered spiritual guidance. Explore verses from the Bhagavad Gita, mantras, and spiritual practices for inner peace." />
+    <meta name="author" content="Divine AI" />
 
-    <meta property="og:title" content="Divine AI - Personal Hindu Wisdom Assistant" />
-    <meta property="og:description" content="Your personal guide to spiritual wisdom from Hindu texts" />
+    <meta property="og:title" content="Divine AI - Your Personal Guide to Hindu Wisdom" />
+    <meta property="og:description" content="Discover ancient Hindu wisdom through AI-powered spiritual guidance. Explore verses from the Bhagavad Gita, mantras, and spiritual practices for inner peace." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/divine-ai-banner.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@divine_ai" />
+    <meta name="twitter:image" content="/divine-ai-banner.jpg" />
   </head>
 
   <body>
