--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Divine AI - Your Personal Guide to Hindu Wisdom</title>
     <meta name="description" content="Discover ancient Hindu wisdom through AI-powered spiritual guidance. Explore verses from the Bhagavad Gita, mantras, and spiritual practices for inner peace." />
