fix: improve menu responsiveness for mobile devices, especially iPhones Add overflow-y-auto to SheetContent for scrollable menu Increase touch target size for menu items and buttons Enhance language selector accessibility with larger controls Add iOS-specific safe area padding for notched devices Update viewport meta tag for better mobile compatibility

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>Divine AI - Your Personal Guide to Hindu Wisdom</title>
     <meta name="description" content="Discover ancient Hindu wisdom through AI-powered spiritual guidance. Explore verses from the Bhagavad Gita, mantras, and spiritual practices for inner peace." />
     <meta name="author" content="Divine AI" />
